# ahsr_ws

src/Electronics_firmware/: 2motor_arduino_code_encoder.ino
src/ahsr_web_gui/: package.xml  setup.cfg  setup.py
src/ahsr_web_gui/ahsr_web_gui/: techno_voice_node.py  web_gui_node.py
src/ahsr_web_gui/launch/: web_control.launch.py
src/rplidar_ros/src/: rplidar_node.cpp
src/shopmate_bot/shopmate_bot_description/urdf/: shopmate_bot.urdf.xacro  shopmate_bot.xacro
src/shopmate_bot_bringup/: setup.py
src/shopmate_bot_bringup/config/: mapping_ahsr.rviz  nav2_params.yaml
src/shopmate_bot_bringup/launch/: navigation.launch.py  real_mapping.launch.py  real_robot.launch.py
src/shopmate_bot_bringup/maps/: house_map.pgm  house_map.yaml  my_perfect_map.pgm  my_perfect_map.yaml  my_room_map.pgm  my_room_map.yaml
src/shopmate_bot_voice/: package.xml  setup.cfg  setup.py
src/shopmate_bot_voice/launch/: techno_voice.launch.py
src/shopmate_bot_voice/shopmate_bot_voice/: techno_voice_node.py
src/wheel_odom_cpp/src/: wheel_odom_cpp.cpp
